# settings-manager.github.io

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
configuration/: index.html
configuration/branches/: index.html
configuration/collaborators/: index.html
configuration/general/: index.html
configuration/labels/: index.html
docs/: configuration.md  getting-started.md  index.md
docs/configuration/: .collaborators.md.swp  branches.md  collaborators.md  general.md  labels.md
getting-started/: index.html
search/: search_index.json
