[tool.poetry]
name = "settings-manager.github.io"
version = "0.1.0"
description = ""
authors = ["Rob van der Leek <robvanderleek@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.10"
mkdocs-glightbox = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
